Fixed scrollbar bug

--- a/src/Components/Profile/ProfileModal.css
+++ b/src/Components/Profile/ProfileModal.css
@@ -1,3 +1,8 @@
 .hideScrollBar::-webkit-scrollbar{
     display: none
   }
+
+  .hideScrollBar {
+    scrollbar-width: none;  
+    -ms-overflow-style: none;  
+  }
